--- a/style.css
+++ b/style.css
@@ -1,26 +1,36 @@
-.hand {
-	transform: rotate(270deg); 
-	margin: 300px; 
-	width: 100px; 
-	height: 100px;
+body {
+    background-color: #48a5e6;
 }
-.circle {
-	width: 100px;
-	height: 100px;
-	background: red;
-	-moz-border-radius: 50px;
-	-webkit-border-radius: 50px;
-	border-radius: 50px;
-	position: relative;
-	bottom: 200px;
+.content {
+    width: 700px;
+    margin: 0 auto;
+}
+.hand {
+    transform: rotate(220deg);
+    margin: 0 auto;
+    margin-top: -300px;
+    width: 0;
+    height: 0;
 }
 .triangle-up {
-	width: 0;
-	height: 0;
-	border-left: 20px solid transparent;
-	border-right: 20px solid transparent;
-	border-bottom: 200px solid red;
-	position: relative;
-	bottom: 190px;
-	left: 30px;
+    width: 10px;
+    height: 50px;
+    background-color: #fff;
+    position: relative;
+    bottom: 288px;
+}
+.background {
+    margin: 0 auto;
+    background-image: url('bg.png');
+    background-size: cover;
+    width: 600px;
+    height: 600px;
+    position: relative;
+}
+.deg {
+    text-align: center;
+    font-size: 100px;
+    font-family: arial;
+    color: #fff;
+    margin-top: -46px;
 }
